syntax = "proto3";
package ultimate.service.pubsub;

option go_package = "github.com/hellodudu/Ultimate/proto/pubsub";

import "arena/arena.proto";
/* import "game/game.proto"; */
/* import "world/world.proto"; */

/////////////////////////////////////////////////
// pub/sub
/////////////////////////////////////////////////
message PublishBroadCast {
    string msg_name = 1;
    bytes msg_data = 2;
}

message PublishSendWorldMessage {
    uint32 id = 1;
    string msg_name = 2;
    bytes msg_data = 3;
}

message PublishMatching {
    int64 id = 1;
}

message PublishAddRecord {
    arena.ArenaRecord data = 1;
}

message PublishBattleResult {
    int64 attack_id = 1;
    int64 target_id = 2;
    bool attack_win = 3;
}


